# libgamecommon

./: .gitignore  .travis.yml  Makefile.am  README  README.md  TODO  appveyor.yml  autogen.sh  configure.ac  libgamecommon.pc.in
doc/: libgamecommon.doxygen
doxygen/: api.doxygen
include/camoto/: Makefile.am  attribute.hpp  bitstream.hpp  byteorder.hpp  config.hpp  debug.hpp  enum-ops.hpp  error.hpp  exceptions.hpp  filter-crop.hpp  filter-dummy.hpp  filter-lzss.hpp  filter-lzw.hpp  filter-pad.hpp  filter.hpp  filter_dummy.hpp  filteredstream.hpp  formatenum.hpp  iff.hpp  iostream_helpers.hpp  lzw.hpp  metadata.hpp  segmented_stream.hpp  stream.hpp  stream_file.hpp  stream_filtered.hpp  stream_memory.hpp  stream_seg.hpp  stream_string.hpp  stream_sub.hpp  substream.hpp  suppitem.hpp  types.hpp  util.hpp
src/: Makefile.am  attribute.cpp  bitstream.cpp  error.cpp  exceptions.cpp  filter-crop.cpp  filter-dummy.cpp  filter-lzss.cpp  filter-lzw.cpp  filter-pad.cpp  filter.cpp  filter_dummy.cpp  filteredstream.cpp  iff.cpp  iostream_helpers.cpp  lzw.cpp  metadata.cpp  segmented_stream.cpp  stream.cpp  stream_file.cpp  stream_filtered.cpp  stream_memory.cpp  stream_seg.cpp  stream_string.cpp  stream_sub.cpp  substream.cpp  suppitem.cpp  util.cpp
tests/: Makefile.am  test-bitstream.cpp  test-byteorder.cpp  test-filter-crop.cpp  test-filter-lzss.cpp  test-filter-lzw.cpp  test-filter-pad.cpp  test-filteredstream.cpp  test-iff.cpp  test-iostream_helpers.cpp  test-lzw.cpp  test-segmented_stream.cpp  test-stream.cpp  test-streamMove.cpp  test-stream_file.cpp  test-stream_filtered.cpp  test-stream_seg.cpp  test-stream_string.cpp  test-stream_sub.cpp  test-substream.cpp  test-util.cpp  tests.cpp  tests.hpp
win32/: libgamecommon.sln
win32/libgamecommon/: libgamecommon.autopkg  libgamecommon.autopkg.template  libgamecommon.vcxproj
win32/libgamecommon-tests/: libgamecommon-tests.vcxproj  packages.config
